log/build_2021-05-31_15-43-09/gazebo_plugin_sim/stderr.log
/home/javierfr/Tesis_ws/V1/src/gazebo_plugin_sim/src/platform_plugin_test.cpp: In member function ‘virtual void gazebo_plugin_sim::PlatformPluginTest::Load(gazebo::physics::ModelPtr, sdf::v9::ElementPtr)’:
/home/javierfr/Tesis_ws/V1/src/gazebo_plugin_sim/src/platform_plugin_test.cpp:93:12: error: ‘class gazebo_plugin_sim::PlatformPluginTest’ has no member named ‘SetVelocityM1’
   93 |      this->SetVelocityM1(velocityM1);
      |            ^~~~~~~~~~~~~
/home/javierfr/Tesis_ws/V1/src/gazebo_plugin_sim/src/platform_plugin_test.cpp: In member function ‘void gazebo_plugin_sim::PlatformPluginTestPrivate::SetVelocityM1(const double&)’:
/home/javierfr/Tesis_ws/V1/src/gazebo_plugin_sim/src/platform_plugin_test.cpp:109:3: error: ‘impl_’ was not declared in this scope; did you mean ‘mpl_’?
  109 |   impl_->model_->GetJointController()->SetVelocityTarget(
      |   ^~~~~
      |   mpl_
At global scope:
cc1plus: warning: unrecognized command line option ‘-Wno-inconsistent-missing-override’
make[2]: *** [CMakeFiles/platform_plugin_test.dir/build.make:63: CMakeFiles/platform_plugin_test.dir/src/platform_plugin_test.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:78: CMakeFiles/platform_plugin_test.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
